Updating with more recent information

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 	              <li><a href="archive">Portfolio</a></li>
 	              <li><a href="huckleberry">Huck</a></li>
-                <li><a href="https://www.amyrayblog.com">The Fiancé</a> </li>
+                <li><a href="https://www.amyrayblog.com">The Wife</a> </li>
 	              <li><a href="HarrisonJansmaResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
 	              </ul>
 
@@ -89,7 +89,7 @@
 									 A few interesting things about me. I love to read science fiction (my favorite is Frank Herbert's Dune). I am also an avid gamer. I love to play competitive strategy games and first-person shooters. Lastly, I love learning. Every day I push myself to learn something new, whether that be about machine learning, software engineering, or miscellaneous facts about the universe.
 								</p>
 								<p class="fz-16">
-									 I recently started working as a data process manager at Capital One. My work mainly revolves around finding ways to automate business reports that have been entirely manual in the past. I have cut down the number of Graduate classes I am taking to accomadate a fulltime work schedule, but I plan to graduate from the University of Texas at Dallas in May with a Masters in Computer Science.
+									 On top of recently becoming marries and graduating with a masters in computer science from UT Dallas, I also recently started working as a senior data scientist at Capital One. My work mainly revolves around utilizing natural language processing to build a more intelligent customer experience.
 								</p>
 
 							</blockquote>
@@ -120,7 +120,7 @@
 								<span class="lnr lnr-cloud-check"></span>
 								<a><h4>Cloud Compute</h4></a>
 								<p>
-										I maintain servers for database storage, model training, and model deployment.
+										I utilize AWS to develop and productionize machine learning systems.
 								</p>
 							</div>
 						</div>
@@ -132,7 +132,7 @@
 								<span class="lnr lnr-bubble"></span>
 								<a><h4>NLP</h4></a>
 								<p>
-									I have worked with researchers to apply NLP techniques to make sense of the motivations behind human interactions.
+									I apply text analytics to some of the hardest questions in business.
 								</p>
 							</div>
 						</div>
@@ -142,7 +142,7 @@
 								<span class="lnr lnr-graduation-hat"></span>
 								<a><h4>Machine Learning</h4></a>
 								<p>
-									Machine learning is more than an API call to scikit-learn. I love the math and theory as well as the implementation.
+									I am passionate about learning the theory that is pushing the cutting edge of ML.
 								</p>
 							</div>
 						</div>
@@ -153,16 +153,16 @@
 								<span class="lnr lnr-layers"></span>
 								<a><h4>Parallel Computing</h4></a>
 								<p>
-									I regularly extract data from Hadoop databases using the HIVE framework.
+									HIVE, Hadoop, and Spark, Oh my!
 								</p>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
 								<span class="lnr lnr-laptop-phone"></span>
-								<a><h4>Model Deployment</h4></a>
+								<a><h4>Collaboration</h4></a>
 								<p>
-									I implement machine learning models in real world production systems using REST APIs.
+									I enjoy working with my team to create winning strategies.
 								</p>
 							</div>
 						</div>
@@ -171,7 +171,7 @@
 								<span class="lnr lnr-chart-bars"></span>
 								<a><h4>Data Analytics</h4></a>
 								<p>
-									I love telling a story. Making a beautiful and compelling presentation is one of my favorite skills.
+									I love telling a story. Getting to the heart of a problem and coming up with a solution.
 								</p>
 							</div>
 						</div>
@@ -266,17 +266,17 @@
 
 				<div class="single-skill">
 					<p>
-						Statistical Methods - 3
+						Statistical Methods - 4
 					</p>
-					<div class="skill" data-width="60"></div>
+					<div class="skill" data-width="80"></div>
 				</div>
 
 
 				<div class="single-skill">
 					<p>
-						Visualization (Tableau) - 2
+						Visualization (Tableau) - 3
 					</p>
-					<div class="skill" data-width="40"></div>
+					<div class="skill" data-width="60"></div>
 				</div>
 
 			</div>
@@ -328,7 +328,7 @@
 			<div class="single-recent-blog col-lg-4 col-md-4">
 				<div class="thumb">
 					<a href="https://github.com/harrisonjansma/2019_Notes/tree/master/ML/NLP/PyTorch%20RNN%20Implementations" target="_blank">
-					<img class="f-img" src="img/alg.jpg" alt="" height=242>
+					<img class="f-img img-fluid" src="img/alg.jpg" alt="">
 				</a>
 				</div>
 				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
@@ -347,7 +347,7 @@
 			<div class="single-recent-blog col-lg-4 col-md-4">
 				<div class="thumb">
 					<a href="https://github.com/harrisonjansma/DavisBase" target="_blank">
-					<img class="f-img" src="https://images.all-free-download.com/images/graphiclarge/vintage_database_icons_vector_536187.jpg" alt="" height=242>
+					<img class="f-img img-fluid" src="https://images.all-free-download.com/images/graphiclarge/vintage_database_icons_vector_536187.jpg" alt="" style="width:300px;height:294px;">
 				</a>
 				</div>
 				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
