--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 
 	              <li><a href="archive">Portfolio</a></li>
 	              <li><a href="huckleberry">Huck</a></li>
-                <li><a href="https://www.amyrayblog.com">The Fiancé</a> </li>
+                <li><a href="https://www.amyrayblog.com">The Wife</a> </li>
 	              <li><a href="HarrisonJansmaResume.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
 	              </ul>
 
@@ -89,7 +89,9 @@
 						<div class="col-lg-12 pt-60">
 							<p>At the beginning of 2018, I didn't know where my life was going. After some serious self-reflection about my passions and interests, I committed to learning everything I could about machine learning, data science, and the tech industry.</p><p>
 
-							In April I started working fulltime at Capital One as a data process manager. Here I use my technical knowledge to automate a few of the tedious business processes that always lurk in large organizations. My intention is to help my colleagues by removing the repetitive tasks that eat away at our attention each workday.</p>
+								After graduating woth a masters in Computer Science from UT Dallas and a year of working at Capital One, I have officially become a Data Scientist in the auto financing organization at Capital One. Here I am utilizing my knowledge of machine learning engineering to build intelligent systems to better the customer experience
+
+						</p>
 
 
 						</div>
@@ -116,7 +118,7 @@
 			    <li>
 			      <div class="content">
 			        <h4>
-			          <time>Bachelors in Mathematics and Business</time>
+			          <time>Bachelors in Mathematics and Economics</time>
 			        </h4>
 			        <p><b>Baylor University 2017</b></p>
 			        <p><b>GPA:</b> 3.86 (On a scale of 4.00)</p>
@@ -132,15 +134,7 @@
 			        <p>November 2017 - March 2018</p>
 			      </div>
 			    </li>
-			    <li>
-			      <div class="content">
-			        <h4>
-			          <time>Masters in Computer Science</time>
-			        </h4>
-			        <p><b>University of Texas at Dallas</b></p>
-			        <p>August 2018 - Dec 2020</p>
-			      </div>
-			    </li>
+
 					<li>
 					 <div class="content">
 						 <h4>
@@ -164,7 +158,7 @@
 						 <h4>
 							 <time>Data Science Intern</time>
 						 </h4>
-						 <p><b>Sprint - Billing Systems</b></p>
+						 <p><b>Sprint - Intelligent Billing Systems</b></p>
 						 <p>May 2019 - Nov 2019</p>
 					 </div>
 				 </li>
@@ -173,8 +167,26 @@
 						 <h4>
 							 <time>Data Process Manager</time>
 						 </h4>
-						 <p><b>Capital One</b></p>
-						 <p>April 2020 - Present</p>
+						 <p><b>Capital One - Auto Financ</b></p>
+						 <p>April 2020 - May 2021</p>
+					 </div>
+				 </li>
+				 <li>
+					 <div class="content">
+						 <h4>
+							 <time>Masters in Computer Science</time>
+						 </h4>
+						 <p><b>University of Texas at Dallas</b></p>
+						 <p>August 2018 - May 2021</p>
+					 </div>
+				 </li>
+				 <li>
+					 <div class="content">
+						 <h4>
+							 <time>Senior Data Scientist</time>
+						 </h4>
+						 <p><b>Capital One - Auto Finance</b></p>
+						 <p>May 2021 - Present</p>
 					 </div>
 				 </li>
 			  </ul>
