Fixing a typo and updating an image

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 									 A few interesting things about me. I love to read science fiction (my favorite is Frank Herbert's Dune). I am also an avid gamer. I love to play competitive strategy games and first-person shooters. Lastly, I love learning. Every day I push myself to learn something new, whether that be about machine learning, software engineering, or miscellaneous facts about the universe.
 								</p>
 								<p class="fz-16">
-									 On top of recently becoming marries and graduating with a masters in computer science from UT Dallas, I also recently started working as a senior data scientist at Capital One. My work mainly revolves around utilizing natural language processing to build a more intelligent customer experience.
+									 On top of recently getting married and graduating with a masters in computer science from UT Dallas, I also recently started working as a senior data scientist at Capital One. My work mainly revolves around utilizing natural language processing to build a more intelligent customer experience.
 								</p>
 
 							</blockquote>
@@ -347,7 +347,7 @@
 			<div class="single-recent-blog col-lg-4 col-md-4">
 				<div class="thumb">
 					<a href="https://github.com/harrisonjansma/DavisBase" target="_blank">
-					<img class="f-img img-fluid" src="https://images.all-free-download.com/images/graphiclarge/vintage_database_icons_vector_536187.jpg" alt="" style="width:300px;height:294px;">
+					<img class="f-img img-fluid" src="img/database.png" alt="" style="width:300px;height:294px;">
 				</a>
 				</div>
 				<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
